--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,17 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.Grid {
+    background: white
+}
+
+.container {
+    background: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.react-parallax-bgimage, .page-header {
+    /*height: 100px;*/
+}
+
