--- a/src/front/index.css
+++ b/src/front/index.css
@@ -3,4 +3,6 @@ body {
     padding: 0;
     font-family: sans-serif;
     overflow-y: scroll;
+    background-image: url("/public/background.jpg");
+
 }
