--- a/src/front/login/login.less
+++ b/src/front/login/login.less
@@ -17,3 +17,18 @@
 .width-100 {
   width: 100%;
 }
+
+.info-alert {
+  transition: opacity 0.5s;
+  opacity: 0;
+  position: absolute;
+
+  h3 {
+    margin: 0;
+  }
+
+  &.show {
+    opacity: 1;
+    position: initial;
+  }
+}
