--- a/src/front/schedule/cells/cell.less
+++ b/src/front/schedule/cells/cell.less
@@ -33,10 +33,33 @@
 }
 
 .modal-content {
-  .modal-header, .modal-body {
-    .form-control {
+  .modal-header {
+    input.form-control {
       border: none;
       box-shadow: none;
+
+      &:focus {
+        background: #eee;
+      }
     }
   }
+
+  .modal-body {
+    textarea.form-control {
+      border: none;
+      box-shadow: none;
+      min-width: 100%;
+      max-width: 100%;
+      min-height: 300px;
+      resize: none;
+
+      &:focus {
+        background: #eee;
+      }
+    }
+  }
+}
+
+.edit {
+  cursor: pointer;
 }
